# stock-pilot

./: README.md  package-lock.json  package.json
apps/angel-mcp/: .env.example  .gitignore  Dockerfile  README.Deployment.md  README.md  angel_client.py  angel_remote.py  http_server.py  mcp.json  paper_engine.py  pyproject.toml  server.py  tools_shared.py
apps/frontend/: .env.example  .env.local  .gitignore  .npmrc  README.Deployment.md  README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/hooks/: useAngel.ts
apps/frontend/src/lib/: angelClient.ts  chart.ts
apps/frontend/src/types/: dashboard.ts
apps/news-mcp/: Dockerfile  README.Deployment.md  README.md  pyproject.toml
apps/news-mcp/src/news_mcp/: server.py
apps/slm-agent/: .env.example  .gitignore  README.md  README.workers.md  package.json  tsconfig.json  wrangler.toml
apps/slm-agent/src/: index.ts  worker.ts
apps/slm-agent/src/agents/: StockNewsAgent.ts  parseFinal.ts  transform.ts
apps/slm-agent/src/mcp/: client.ts  enrich.ts
apps/slm-agent/src/paper/: ltp.ts  store.ts
slm-agent/: README.md  package.json  tsconfig.json
slm-agent/src/: index.ts
slm-agent/src/agents/: StockNewsAgent.ts
slm-agent/src/core/: FenceParser.ts  MessageBuffer.ts  SLMAdapters.ts  types.ts
slm-agent/src/prompts/: index.ts
slm-agent/src/schemas/: actions.ts
slm-agent/src/tools/: NewsSearchTool.ts  SymbolResolveTool.ts  TimeNowTool.ts
slm-agent/src/util/: cache.ts  logger.ts
(+36 files in other folders)
