[project]
name = "mcp-angel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.28.1",
    "logzero>=1.7.0",
    "mcp[cli]>=1.13.1",
    "pyotp>=2.9.0",
    "smartapi-python>=1.5.5",
    "websocket-client>=1.8.0",
]
