[project]
name = "news-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=0.2",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "feedparser>=6.0",
  "python-dateutil>=2.9",
  "pydantic>=2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_mcp"]

[project.scripts]
news-mcp = "news_mcp.server:main"
